# Aegis5

./: .gitignore  LICENSE  README.md  aegis5.py  demo.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
aegis5/: __init__.py  model.py
tests/: test_model.py  test_weights.py
