[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis5"
version = "0.1.0"
description = "Adaptive hybrid ensemble framework for intrusion detection in Industry 5.0 environments"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Vijay Govindarajan", email = "vijay.govindarajan91@gmail.com" },
]
keywords = [
    "intrusion-detection",
    "ensemble-learning",
    "cybersecurity",
    "iiot",
    "industry-5.0",
    "meta-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "imbalanced-learn>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.urls]
Homepage = "https://github.com/vijaygovindaraja/Aegis5"
Paper = "https://doi.org/10.1145/3787224"
Issues = "https://github.com/vijaygovindaraja/Aegis5/issues"

[tool.hatch.build.targets.wheel]
packages = ["aegis5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
